--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ springdoc.api-docs.path=/api-docs
 springdoc.show-actuator=false
 springdoc.swagger-ui.path=/swagger-ui.html
 management.endpoints.web.exposure.include=*
+spring.devtools.restart.enabled=true
