Setting docker to start up through maven "validate" step

--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,6 @@
 			<version>3.0.1</version>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 	<build>
 		<plugins>
@@ -151,6 +150,28 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.0.0</version>
+				<groupId>org.codehaus.mojo</groupId>
+				<executions>
+					<execution>
+						<id>Run Containers</id>
+						<phase>validate</phase>
+						<configuration>
+							<executable>docker-compose</executable>
+							<commandlineArgs>up --detach</commandlineArgs>
+						</configuration>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
