--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     container_name: mock_roles_container
     command: 'mock -h 0.0.0.0 /app/helloopenapi-client.yaml'
     volumes:
-      - ../yml:/app
+      - ./yml:/app
     ports:
       - "4010:4010"
