Converted to react

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ springdoc.show-actuator=false
 springdoc.swagger-ui.path=/swagger-ui.html
 management.endpoints.web.exposure.include=*
 spring.devtools.restart.enabled=true
+spring.main.web-application-type=reactive
