[DaveT] pushing changes for reactive

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
 			<artifactId>netty-resolver-dns-native-macos</artifactId>
 			<version>4.1.97.Final</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
